resolved background break on large screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -11076,7 +11076,7 @@ section.separate-section {
   align-items: center;
   padding-top: 5rem;
   padding-bottom: 5rem;
-  max-width: 75rem;
+  max-width: 100rem;
 }
 
 section.separate-section .separate-section-content {
